config: actualizar proyecto a JDK 21